# encrypted-file-vault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: package_it.py
src/: algo.rs  aliases.rs  config.rs  consts.rs  core.rs  enums.rs  error.rs  export.rs  file_ops.rs  index.rs  key_ops.rs  lib.rs  rotate_keys.rs  util.rs  vault.rs  vault_db_ops.rs
src/config/: app.rs  defaults.rs  env.rs  mod.rs
src/core/: crypto.rs  file.rs  index.rs  key.rs  mod.rs  vault.rs  vault_db_ops.rs
src/core/crypto/: decrypt.rs  encrypt.rs  rotate.rs
src/crypto/: decrypt.rs  encrypt.rs  legacy.rs  mod.rs  rotate.rs
src/db/: mod.rs  vault_db_ops.rs
src/export/: bitwarden.rs  csv.rs  json.rs  mod.rs
src/legacy/: mod.rs  upgrade.rs
src/rotation/: mod.rs  v3.rs
tests/: common.rs  core_test.rs  core_tests.rs  crypto_tests.rs  db_tests.rs  export_tests.rs  file_ops_tests.rs  history_tests.rs  key_ops_tests.rs  rotate_key_streaming_tests.rs  support.rs  util_tests.rs  vault_workflow_tests.rs  vector_tests.rs
tests/core/: crypto.rs  file.rs  key.rs  mod.rs  util.rs  vault_workflow.rs
tests/data_input/: README.md  deterministic_test_vectors_v3.json  test_vectors_v0.json  test_vectors_v1.json  test_vectors_v2.json  test_vectors_v3.json
tests/fixtures/: secret.txt
tests/vector/data/: README.md  deterministic_test_vectors_v3.json  test_vectors_v3.json
