[package]
name = "encrypted-file-vault"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slurp9187/encrypted-file-vault"
documentation = "https://docs.rs/encrypted-file-vault"
keywords = ["crypto", "security", "zeroize", "sqlcipher", "aescrypt"]
categories = ["cryptography", "data-structures"]

[dependencies]
# ──────────────────────────────────────────────────────────────
# Core mandatory dependencies — impossible to disable securely
# ──────────────────────────────────────────────────────────────
aescrypt-rs = "0.1" # AES Crypt v3 file format — this crate's entire purpose

base64 = "0.22"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hex = "0.4.3"
once_cell = "1.19"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"

rusqlite = { version = "0.37", features = [
  "bundled-sqlcipher-vendored-openssl",
], default-features = false }
secure-gate = { version = "0.5", features = [
  "zeroize",
  "rand",
  "conversions",
  "serde",
] }

# ──────────────────────────────────────────────────────────────
# Optional / future CLI & logging dependencies
# ──────────────────────────────────────────────────────────────
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
], optional = true }
anyhow = { version = "1.0", optional = true }
rpassword = { version = "7.4", optional = true }
walkdir = { version = "2.5", optional = true }
pipe = "0.4.0"

[dev-dependencies]
tempfile = "3.23"
serial_test = "3.1"
crossbeam-channel = "0.5"

# ──────────────────────────────────────────────────────────────
# FEATURES — security-critical settings are forced on
# ──────────────────────────────────────────────────────────────
[features]
default = [
  "rusqlite/bundled-sqlcipher-vendored-openssl",
  "secure-gate/zeroize",
  "secure-gate/rand",
  "secure-gate/conversions",
]
cli = [
  "dep:anyhow",
  "dep:rpassword",
  "dep:walkdir",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:env_logger",
  "dep:log",
]
logging = ["dep:log", "dep:env_logger", "dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "decrypt_batch"
path = "src/bin/decrypt_batch.rs"
required-features = ["cli"]
